# ITMO_PE

./: .env.example  .gitignore  README.md  pyproject.toml
src/autosport_bot/: __init__.py  __main__.py  main.py
src/autosport_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autosport_bot/bot/: __init__.py  context.py  keyboards.py
src/autosport_bot/bot/handlers/: start.py
src/autosport_bot/core/: __init__.py  config.py
src/autosport_bot/my_itmo/: __init__.py  auth.py  client.py
src/autosport_bot/remnawave/: __init__.py  check.py  client.py
src/autosport_bot/scheduler/: __init__.py  auto_enroll_worker.py  poller.py
src/autosport_bot/storage/: __init__.py  models.py  repository.py
tests/: __init__.py  test_config.py
