[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosport-bot"
version = "0.1.0"
description = "Telegram bot for ITMO sports auto-enrollment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.0",
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
